--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=demo
+spring.application.name=study-jpa-plus
+spring.config.import=optional:file:.env[.properties]
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
@@ -9,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # create, update, none, creat-drop
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
