--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL = jdbc:mysql://localhost:3306/jpa_study
 DATABASE_USERNAME = root
 DATABASE_PASSWORD = gjiy!y05978!
-DDL_AUTO = create
+DDL_AUTO = update
